Fixing a minor bug in the z-index styling for the header containers in the Heat Map.

--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -43,12 +43,13 @@
     top: 20px;
     left: 20px;
     right: 20px;
-    z-index: 1000;
+    z-index: 1005;
 }
 
 .heat-map .header-container.second-header {
     top: 50px;
     left: 60px;
+    z-index: 1000;
 }
 
 .heat-map .alert {
